<?xml version="1.0" encoding="utf-8"?>
<cards xmlns:card="http://schemas.android.com/apk/res/com.fliu98.hearthfire">
    <card
        card:id="0"
        card:type="0"
        card:mana="2"
        card:hero_class="0"
        card:name="@string/acidic_swamp_ooze"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="1"
        card:type="1"
        card:mana="0"
        card:hero_class="7"
        card:name="@string/ancestral_healing"
        card:res_name="ancestral_healing"
        />
    <card
        card:id="2"
        card:type="1"
        card:mana="3"
        card:hero_class="2"
        card:name="@string/animal_companion"
        card:res_name="animal_companion"
        />
    <card
        card:id="3"
        card:type="1"
        card:mana="2"
        card:hero_class="3"
        card:name="@string/arcane_explosion"
        card:res_name="arcane_explosion"
        />
    <card
        card:id="4"
        card:type="1"
        card:mana="3"
        card:hero_class="3"
        card:name="@string/arcane_intellect"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="5"
        card:type="1"
        card:mana="1"
        card:hero_class="3"
        card:name="@string/arcane_missiles"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="6"
        card:type="1"
        card:mana="1"
        card:hero_class="2"
        card:name="@string/arcane_shot"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="7"
        card:type="2"
        card:mana="5"
        card:hero_class="9"
        card:name="@string/arcanite_reaper"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="8"
        card:type="0"
        card:mana="6"
        card:hero_class="0"
        card:name="@string/archmage"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="9"
        card:type="2"
        card:mana="5"
        card:hero_class="6"
        card:name="@string/assassins_blade"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="10"
        card:type="1"
        card:mana="5"
        card:hero_class="6"
        card:name="@string/assassinate"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="11"
        card:type="1"
        card:mana="0"
        card:hero_class="6"
        card:name="@string/backstab"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="12"
        card:type="1"
        card:mana="4"
        card:hero_class="4"
        card:name="@string/blessing_of_kings"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="13"
        card:type="1"
        card:mana="1"
        card:hero_class="4"
        card:name="@string/blessing_of_might"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="14"
        card:type="0"
        card:mana="2"
        card:hero_class="0"
        card:name="@string/bloodfen_raptor"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="15"
        card:type="1"
        card:mana="5"
        card:hero_class="7"
        card:name="@string/bloodlust"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="16"
        card:type="0"
        card:mana="2"
        card:hero_class="0"
        card:name="@string/bluegill_warrior"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="17"
        card:type="0"
        card:mana="4"
        card:hero_class="0"
        card:name="@string/booty_bay_bodyguard"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="18"
        card:type="0"
        card:mana="6"
        card:hero_class="0"
        card:name="@string/boulderfist_ogre"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="19"
        card:type="1"
        card:mana="3"
        card:hero_class="9"
        card:name="@string/charge"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="20"
        card:type="0"
        card:mana="4"
        card:hero_class="0"
        card:name="@string/chillwind_yeti"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="21"
        card:type="1"
        card:mana="1"
        card:hero_class="1"
        card:name="@string/claw"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="22"
        card:type="1"
        card:mana="2"
        card:hero_class="9"
        card:name="@string/cleave"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="23"
        card:type="1"
        card:mana="4"
        card:hero_class="4"
        card:name="@string/consecration"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="24"
        card:type="0"
        card:mana="7"
        card:hero_class="0"
        card:name="@string/core_hound"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="25"
        card:type="1"
        card:mana="1"
        card:hero_class="8"
        card:name="@string/corruption"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="26"
        card:type="0"
        card:mana="3"
        card:hero_class="0"
        card:name="@string/dalaran_mage"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="27"
        card:type="0"
        card:mana="5"
        card:hero_class="0"
        card:name="@string/darkscale_healer"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="28"
        card:type="1"
        card:mana="1"
        card:hero_class="6"
        card:name="@string/deadly_poison"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="29"
        card:type="1"
        card:mana="2"
        card:hero_class="5"
        card:name="@string/divine_spirit"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="30"
        card:type="0"
        card:mana="4"
        card:hero_class="0"
        card:name="@string/dragonling_mechanic"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="31"
        card:type="1"
        card:mana="3"
        card:hero_class="8"
        card:name="@string/drain_life"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="32"
        card:type="0"
        card:mana="6"
        card:hero_class="8"
        card:name="@string/dread_infernal"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="33"
        card:type="0"
        card:mana="1"
        card:hero_class="0"
        card:name="@string/elven_archer"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="34"
        card:type="1"
        card:mana="1"
        card:hero_class="9"
        card:name="@string/execute"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="35"
        card:type="1"
        card:mana="3"
        card:hero_class="6"
        card:name="@string/fan_of_knives"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="36"
        card:type="2"
        card:mana="2"
        card:hero_class="9"
        card:name="@string/fiery_war_axe"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="37"
        card:type="0"
        card:mana="6"
        card:hero_class="7"
        card:name="@string/fire_elemental"
        card:res_name="acidic_swamp_ooze"
        />
    <card
        card:id="38"
        card:type="1"
        card:mana="4"
        card:hero_class="3"
        card:name="@string/fireball"
        card:res_name="acidic_swamp_ooze"
        />
</cards>