<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fliu98.hearthfire.DeckSaveFragment">

    <EditText
        android:id="@+id/deck_title"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:maxLength="24"
        android:hint="@string/deck_name_hint"
        android:layout_gravity="center_horizontal"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <EditText
            android:id="@+id/deck_description"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:maxLength="150"
            android:hint="@string/deck_description_hint" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

    <Button
        android:id="@+id/button_save_deck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_deck"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
